Run the browser tests with the 'browser-tests' profile